<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapp.dhruv.myfirstapp.displayfirstsubs"
    android:background="@color/maincolor">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/firstsubs"
    android:textSize="24dp"
    android:gravity="center"
    />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="beginning|middle|end">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub1"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="maths"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub2"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="english"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub3"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="physics"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub4"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="boesem1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub5"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="focp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1sub6"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="bme"
            />


    </LinearLayout>


</RelativeLayout>
