<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapp.dhruv.myfirstapp.displaysecondsubs"
    android:background="@color/maincolor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondsubs"
        android:textSize="24dp"
        android:gravity="center"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="beginning|middle|end">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mathsem2"
            android:text="@string/sem2sub1"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="displaysem2"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub2"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/engsem2"
            android:onClick="displaysem2"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub3"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/physem2"
            android:onClick="displaysem2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub4"
            android:id="@+id/chemsem2"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="displaysem2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub5"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/wtsem2"
            android:onClick="displaysem2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub6"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/etsem2"
            android:onClick="displaysem2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2sub7"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/egdsem2"
            android:onClick="displaysem2"
            />


    </LinearLayout>


</RelativeLayout>


