<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation = "horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainActivity"
    android:background="@color/maincolor">


    <TextView
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:text="@string/main_heading"
        android:textSize="24dp"

        android:id="@+id/heading"
        android:gravity="center"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:paddingTop="100dp"
    android:orientation="vertical"
    android:divider="?android:dividerHorizontal"
    android:showDividers="beginning|middle|end">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_year"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="ChooseSem"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_year"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="showtoast"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_year"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="showtoast"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourth_year"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="showtoast"
        />


 </LinearLayout>


</RelativeLayout>


