<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapp.dhruv.myfirstapp.semester"
    android:background="@color/maincolor">

    <TextView
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        android:textSize="24dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="beginning|middle|end">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1"
            android:background="?android:attr/selectableItemBackground"
            android:onClick = "DisplaySem1"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="displaySem2"

            />


    </LinearLayout>


</RelativeLayout>
